examination component dark mode fix

--- a/src/app/home/exam/exam.component.scss
+++ b/src/app/home/exam/exam.component.scss
@@ -7,4 +7,11 @@
   .dark-mode .red-title {
     color: #fff;
   }
-  
+  .dark-mode, .dark-mode .red-title{
+    color: #fff;
+  }
+  .dark-mode .card{
+    background-color: #333;
+    color: #fff;
+    border-color: #fff;
+  }
